# tiny_pi_car

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.cursor/rules/: hardware-safety.mdc  project.mdc
.opencode/agents/: autoresearch-director.md  autoresearch-helper.md  autoresearch-reviewer.md  autoresearch-worker.md  pi-live.md  pi-motion.md  pi-observer.md  quick.md  verify.md
MasterPi/: Camera.py  Deviation.yaml  MasterPi.py  command  lab_config.yaml  rpc_server.py
MasterPi/CameraCalibration/: Calibration.py  CalibrationConfig.py  CollectCalibrationPicture.py  GetMapParam.py  (+2 more)
autoresearch/: AWESOME_LISTS.md  FINDINGS.md  README.md  REPOS.md  SOURCES.md
docs/: STATUS.md  getting-started.md  hailo.md  hardware.md
playground/: __init__.py  autonomy_smoke.py  blanket_fetch.py  camera_snap.py  forward_6in.py  gripper_wiggle.py  hailo_probe.py  hello_board.py  micro_move.py  smoke.py  sonar_sample.py  vision_smoke.py  watch_camera.py  watch_sonar.py
scripts/: autoresearch_loop.py  deploy_pi_research.py  fetch_research_artifact.py  hailo_ab_compare.py  list_hefs.py  lms_openai_proxy.py  motion_hour_eval.py  night_perception_eval.py  pi_agent_gate.py  remote_perception_eval.py  setup_hailo_10h.md  setup_hailo_10h.sh  smoke_imports.py  start_autoresearch_worktree.py  stream_roam_eval.py  vision_suite_install.py  vision_suite_status.py
tests/: test_autoresearch_arena.py  test_autoresearch_loop.py  test_autoresearch_worktree.py  test_deploy_pi_research.py  test_detection_log.py  test_motion_arm.py  test_night_perception_eval.py  test_perception_campaign.py  test_perception_score.py  test_physical_trial.py  test_pi_agent_gate.py  test_remote_perception_eval.py  test_roam_fsm.py  test_safety_lease.py  test_smoke_paths.py  test_tracking.py  test_vision_guided_trial.py
(+103 files in other folders)
